syntax = "proto3";

package product;

option go_package = "./internal/product/pb";

service ProductService {
  rpc FindAll(FindAllRequest) returns (FindAllResponse) {}
<<<<<<< HEAD
  rpc FindById(FindByIdRequest) returns (FindByIdResponse) {}
=======
>>>>>>> eaca3977967b745954e415c0eab7ce11569fc0a9
}

message FindAllRequest {
  uint32 Limit=1;
  uint32 Offset=2;
}

<<<<<<< HEAD
message FindByIdRequest {
  uint32 Id=1;
}

message FindByIdResponse {
  ProductDto product=1;
=======
message FindAllResponse {
  repeated ProductDto products=1;
>>>>>>> eaca3977967b745954e415c0eab7ce11569fc0a9
  string error = 2;
}

message FindAllResponse {
  repeated ProductDto products=1;
  string error = 2;
}

message ProductDto {
  uint32 Id=1;
  string Name=2;
  string Intro=3;
  string Description=4;
  uint32 CategoryId=5;
  string Category=6;
  double OriginalPrice=7;
  double SellingPrice=8;
  bool IsSale=9;
  bool IsDeleted=10;
  int64 CreatedAt=11;
  int64 UpdatedAt=12;
}